# composer-rust

./: Cargo.toml  README.md
.github/workflows/: release.yml
resources/example_app/: docker-compose.jinja2
resources/test/simple/: docker-compose.jinja2
resources/test/templates/: required.jinja2
resources/test/test_values/: value_refs.yaml
src/: app.rs  main.rs
src/commands/: cli.rs  delete.rs  inspect.rs  install.rs  mod.rs  self_update.rs  template.rs  upgrade.rs
src/utils/: copy_file_utils.rs  docker_compose.rs  load_values.rs  mod.rs  self_updater.rs  template.rs  test_utils.rs  update_notifier.rs  walk.rs  yaml_string_parser.rs
src/utils/storage/: models.rs  read_from.rs  update_storage.rs  write_to_storage.rs
src/utils/value_resolver/: dependency_graph.rs  extractor.rs  mod.rs  traits.rs
