[package]
name = "composer"
# This will get overwritten during the CICD
version = "0.0.0"
edition = "2021"
authors = ["Sam Ruff - sam@bytesquid.com", "Ryan Brogden - ryan@bytesquid.com"]
readme = "README.md"
resolver = "2"

[profile.release]
# Link time optimisations https://doc.rust-lang.org/cargo/reference/profiles.html#lto
lto = true
# Strip debugging symbols https://doc.rust-lang.org/cargo/reference/profiles.html#strip
strip = true
# Reduce build parallelisation but faster compiled binary https://doc.rust-lang.org/cargo/reference/profiles.html#codegen-units
codegen-units = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
regex = "1.12.4"
log = { version = "0.4.32", features = ["std"] }
gitignore = "1.0.8"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = { package = "serde_yaml_ng", version = "0.10.0" }
minijinja = "0.30.5"
clap = { version = "4.6.1", features = ["derive"] }
anyhow = "1.0.102"
once_cell = "1.21.4"
owo-colors = { version = "3.5.0", features = ["supports-colors"] }
petname = "1.1.3"
walkdir = "2.5.0"
petgraph = "0.6"
dirs = "6.0.0"
serde_json = "1.0.150"
chrono = "0.4.45"
chrono-humanize = "0.2.3"

[dev-dependencies]
assert_matches = "1.5.0"
tempfile = "3.27"
mockall = "0.11"
serial_test = "1.0.0"
relative-path = "1.7.3"
random-string = "1.1.0"
