[package]
name = "composer"
# This will get overwritten during the CICD
version = "0.0.0"
edition = "2021"
authors = ["Sam Ruff - sam@bytesquid.com", "Ryan Brogden - ryan@bytesquid.com"]
description = "A docker-compose package manager."
license = "MIT"
repository = "https://github.com/sam-ruff/composer-rust"
readme = "README.md"
resolver = "2"

[package.metadata.deb]
maintainer = "Sam Ruff <sam@bytesquid.com>"
copyright = "Sam Ruff <sam@bytesquid.com>"
extended-description = "Composer is a package manager for docker-compose applications. It installs, upgrades, templates and deletes compose applications defined with jinja2 templates and values files."
section = "utils"
priority = "optional"
depends = "$auto"
recommends = "docker-compose-v2 | docker-compose-plugin"
assets = [["target/release/composer", "usr/bin/", "755"]]

[profile.release]
# Link time optimisations https://doc.rust-lang.org/cargo/reference/profiles.html#lto
lto = true
# Strip debugging symbols https://doc.rust-lang.org/cargo/reference/profiles.html#strip
strip = true
# Reduce build parallelisation but faster compiled binary https://doc.rust-lang.org/cargo/reference/profiles.html#codegen-units
codegen-units = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
regex = "1.12.4"
log = { version = "0.4.32", features = ["std"] }
gitignore = "1.0.8"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = { package = "serde_yaml_ng", version = "0.10.0" }
minijinja = "2.20.0"
clap = { version = "4.6.1", features = ["derive"] }
anyhow = "1.0.102"
once_cell = "1.21.4"
owo-colors = { version = "4.3.0", features = ["supports-colors"] }
petname = "3.0.0"
walkdir = "2.5.0"
petgraph = "0.8.3"
dirs = "6.0.0"
serde_json = "1.0.150"
chrono = "0.4.45"
chrono-humanize = "0.2.3"

[dev-dependencies]
assert_matches = "1.5.0"
tempfile = "3.27"
mockall = "0.14.0"
serial_test = "3.5.0"
relative-path = "2.0.1"
random-string = "1.1.0"
